--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,12 +8,15 @@ import ProjectsSection from "@/components/ProjectsSection";
 import AwardsSection from "@/components/AwardsSection";
 import EducationSection from "@/components/EducationSection";
 import Footer from "@/components/Footer";
+import { getLangFromUrl } from "@/i18n/utils";
+
+const lang = getLangFromUrl(Astro.url);
 ---
 
 <Layout>
-  <GlassHeader client:only="react" />
+  <GlassHeader client:only="react" lang={lang}/>
   <main class="min-h-screen">
-    <HeroSection client:only="react" />
+    <HeroSection client:only="react" lang={lang}/>
     <ExperienceSection client:only="react" />
     <SkillsSection client:only="react" />
     <ProjectsSection client:only="react" />
