--- a/src/pages/[...lang]/index.astro
+++ b/src/pages/[...lang]/index.astro
@@ -6,6 +6,7 @@ import ExperienceSection from "@/components/ExperienceSection";
 import SkillsSection from "@/components/SkillsSection";
 import ProjectsSection from "@/components/ProjectsSection";
 import EducationSection from "@/components/EducationSection";
+import ContactSection from "@/components/ContactSection";
 import Footer from "@/components/Footer";
 import { getLangFromUrl, useTranslations } from "@/i18n/utils";
 
@@ -29,6 +30,7 @@ const t = useTranslations(lang);
     <SkillsSection client:load lang={lang} />
     <ProjectsSection client:load lang={lang} />
     <EducationSection client:load lang={lang} />
+    <ContactSection client:load lang={lang} />
   </main>
   <Footer client:load />
 </Layout>
