--- a/src/pages/[...lang]/index.astro
+++ b/src/pages/[...lang]/index.astro
@@ -8,7 +8,9 @@ import ProjectsSection from "@/components/ProjectsSection";
 import EducationSection from "@/components/EducationSection";
 import ContactSection from "@/components/ContactSection";
 import Footer from "@/components/Footer";
+import VeilleSection from "@/components/VeilleSection";
 import { getLangFromUrl, useTranslations } from "@/i18n/utils";
+import { getCollection } from "astro:content";
 
 // indique à Astro de générer "/" (fr) et "/en" (en)
 export function getStaticPaths() {
@@ -20,6 +22,9 @@ export function getStaticPaths() {
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
+const articles = (await getCollection("veille")).sort(
+  (a,b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf()
+)
 ---
 
 <Layout lang={lang} description={t("head.description")}>
@@ -29,6 +34,12 @@ const t = useTranslations(lang);
     <ExperienceSection client:load lang={lang} />
     <SkillsSection client:load lang={lang} />
     <ProjectsSection client:load lang={lang} />
+    <VeilleSection 
+      client:load
+      title={t("section.veille")} 
+      lang={lang} 
+      articles={articles}
+      />
     <EducationSection client:load lang={lang} />
     <ContactSection client:load lang={lang} />
   </main>
