Add veille description,thumbnail and modal when clicking

--- a/src/pages/[...lang]/index.astro
+++ b/src/pages/[...lang]/index.astro
@@ -34,13 +34,13 @@ const articles = (await getCollection("veille")).sort(
     <ExperienceSection client:load lang={lang} />
     <SkillsSection client:load lang={lang} />
     <ProjectsSection client:load lang={lang} />
+    <EducationSection client:load lang={lang} />
     <VeilleSection 
       client:load
       title={t("section.veille")} 
       lang={lang} 
-      articles={articles}
+      articles={articles.slice(0, 3)}
       />
-    <EducationSection client:load lang={lang} />
     <ContactSection client:load lang={lang} />
   </main>
   <Footer client:load />
