--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -30,6 +30,7 @@
 }
 
 @theme inline {
+  --font-teko: "Teko", sans-serif;
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
