--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,13 +24,18 @@ const {
     <meta name="generator" content={Astro.generator} />
     <meta name="description" content={description} />
     <title>{title}</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link href="https://fonts.googleapis.com/css2?family=Google+Sans+Flex:opsz,wght@6..144,1..1000&family=Teko:wght@300..700&display=swap" rel="stylesheet">
+    <link 
+      rel="preload" 
+      href="/fonts/inter-v20-latin-regular.woff2" 
+      as="font" 
+      type="font/woff2" 
+      crossorigin>
+      <link 
+        rel="preload" 
+        href="/fonts/teko-v23-latin-600.woff2" 
+        as="font" 
+        type="font/woff2" 
+        crossorigin>
   </head>
   <body
     class="min-h-screen bg-background font-sans antialiased selection:bg-primary/20 selection:text-primary"
