--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,12 @@
 ---
 import "../styles/global.css";
+import "@fontsource/inter/200.css";
+import "@fontsource/inter/300.css";
+import "@fontsource/inter/400.css";
+import "@fontsource/inter/600.css";
+import "@fontsource/inter/700.css";
+import "@fontsource/inter/900.css";
+import "@fontsource/teko/600.css";
 import { getLangFromUrl } from "@/i18n/utils";
 
 interface Props {
@@ -24,18 +31,6 @@ const {
     <meta name="generator" content={Astro.generator} />
     <meta name="description" content={description} />
     <title>{title}</title>
-    <link 
-      rel="preload" 
-      href="/fonts/inter-v20-latin-regular.woff2" 
-      as="font" 
-      type="font/woff2" 
-      crossorigin>
-      <link 
-        rel="preload" 
-        href="/fonts/teko-v23-latin-600.woff2" 
-        as="font" 
-        type="font/woff2" 
-        crossorigin>
   </head>
   <body
     class="min-h-screen bg-background font-sans antialiased selection:bg-primary/20 selection:text-primary"
